--- a/front-end/index.html
+++ b/front-end/index.html
@@ -12,7 +12,7 @@
     <div class="header">
 
         <div class="logo-title">
-            <a href=""><h3>Site Moderno para Venda de Produtos</h3></a>
+            <a href=""><h3>Site para Venda de Produtos</h3></a>
        
 
         </div>
